# sentra-cli

./: .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md  SECURITY.md  TODO.md  build.rs
.codex/skills/cli-design/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
docs/dev/: AGENTS.md
docs/superpowers/plans/: 2026-07-02-scan-output-design.md  2026-07-06-risk-scan-concurrency.md
docs/superpowers/specs/: 2026-07-06-risk-scan-concurrency-design.md
fixtures/mcp/: README.md  evil-script.sh  malicious-sse-server.mjs  malicious-sse.json  malicious-stdio.json
fixtures/memory/: SOUL.md  test.db
fixtures/provider/: .claude.json  README.md  openclaw.json
fixtures/provider/.claude/: settings.json
fixtures/provider/.codex/: auth.json  (+1 more)
scripts/: cargo-env.ps1  install.ps1  install.sh
spec/: codex-tui-design-analysis.md  design.md  model.md
src/: main.rs
src/catelogs/: providers.json
src/cli/: args.rs  bundled_rules.rs  config.rs  feedback.rs  i18n.rs  import.rs  install.rs  list.rs  mod.rs  model.rs  output.rs  scan.rs  scan_support.rs  skill.rs  skill_inventory.rs  skill_manager.rs  updater.rs
src/core/: agent_filter.rs  config.rs  import.rs  install.rs  list.rs  mod.rs  model.rs  scan.rs  scan_support.rs  skill.rs  skill_inventory.rs  updater.rs
src/tui/: mod.rs  skill_manager.rs  theme.rs
tests/: cli_binding_boundary.rs  cli_list.rs
(+21 files in other folders)
