[package]
name = "sentra-cli"
version = "0.2.8"
edition = "2024"
description = "Command-line scanner for local AI Agent assets"
license = "MIT"
repository = "https://github.com/chaitin/sentra-cli"
readme = "README.md"

[[bin]]
name = "sentra"
path = "src/main.rs"

[dependencies]
sentra-lib = { path = "sentra-lib" }
catppuccin = { version = "2.8.0", features = ["ratatui"] }
chrono = { version = "0.4", features = ["clock"] }
crossterm = "0.28"
futures = "0.3"
home = "0.5"
ratatui = "0.30.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tempfile = "3"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "time", "net"] }
unicode-width = "0.2"
ureq = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = "symbols"
